Updated example app

--- a/example.html
+++ b/example.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <iframe src="https://example.com" style="border: 0; width: 100%; height: 100%"></iframe>
+        <h1>Example App for developers</h1>
+        <p>This app is a example app for developers to show developers how .mod files work.</p>
+        <p>.mod files are not executable. They are renamed .zip files that contain the files required for the app.</p>
+        <a href="https://example.com""><button>Test Button</button></a>
     </body>
 </html>
